# dmc-playground

./: .gitignore  .markdownlint.json  GEMINI.md  README.md  pyproject.toml  requirements.txt  test.db  tox.ini
assets/docs/: AI 기반 대시-UI_UX 향상을 위한 대시 만티네 구성요소 가이드.md  AI 기반 대시-UI_UX 향상을 위한 대시 만티네 구성요소 가이드.xmind  how-to-create-dash-dmc-project-sh.md  ui-ux-design-guide-for-dash-mantine-components.md  ui-ux-design-guide-kr.md
assets/tool/: create_dash_dmc_project.sh
frontend/: app.py  index.py  requirements.txt
frontend/components/buttons/: custom_button.py
frontend/components/charts/: bar_chart.py
frontend/components/data-display/: custom_table.py
frontend/components/date-pickers/: date_picker.py
frontend/components/navigation/: sidebar.py
frontend/components/theming/: theme_provider.py
frontend/components/typography/: title_text.py
frontend/pages/dashboard/: layout.py
frontend/themes/: main_theme.py
frontend/utils/: validation_utils.py
src/backend/: README.md  __version__.py  config.py  database.py  main.py  pyproject.toml
src/backend/api/: robot_stock_api.py  stock_api.py
src/backend/models/: holding.py  price.py  stock.py  transaction.py
src/backend/services/: stock_downloader.py  stock_service.py  yf_adapter.py
src/backend/tests/unit_tests/backend/: test_database_init.py  test_stock_crud.py
src/frontend/: app.py
src/frontend/components/buttons/: custom_button.py
src/frontend/components/charts/: bar_chart.py
src/frontend/components/combobox/: select_box.py
src/frontend/components/data_display/: custom_table.py
src/frontend/components/date_pickers/: date_picker.py
src/frontend/components/feedback/: notification_banner.py
src/frontend/components/inputs/: text_input.py
src/frontend/components/layout/: app_shell.py
src/frontend/components/miscellaneous/: color_swatch.py
src/frontend/components/navigation/: sidebar.py
src/frontend/components/overlay/: modal.py
src/frontend/components/theming/: theme_provider.py
src/frontend/components/typography/: title_text.py
src/frontend/config/: settings.py
src/frontend/pages/dashboard/: layout.py
src/frontend/pages/home/: layout.py
src/frontend/services/: data_service.py
src/frontend/utils/: data_utils.py  validation_utils.py
tests/backend/: conftest.py  test_stock_api.py
tests/unit_tests/backend/: conftest.py  test_database_init.py  test_stock_api.py  test_stock_api_create.py  test_stock_api_delete.py  test_stock_api_read.py  test_stock_api_update.py  test_stock_crud.py  test_stock_models.py
tests/unit_tests/backend/services/: test_stock_downloader.py  test_yf_adapter.py
typings/: dash_mantine_components.pyi
