[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seraph-default-backend-server"
version = "0.1.0"
description = "A reusable FastAPI backend server template with SQLModel and PostgreSQL support."
authors = [{ name = "deity719", email = "deity719@github.com" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]",
  "sqlmodel>=0.0.24",
  "psycopg2-binary",
  "sqlalchemy>=2.0.43",
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "httpx>=0.28.1",
  "pydantic", # FastAPI, SQLModel 의존성
  "pydantic-settings", # config.py 에서 사용
  "pydantic-extra-types", # 필요시 추가
]

[tool.setuptools]
# 현재 디렉토리(src/backend)를 패키지 루트로 지정
package-dir = {"" = "."}

[tool.setuptools.packages.find]
# 현재 디렉토리(src/backend) 내에서만 패키지를 찾도록 설정
where = ["."]
# exclude = ["tests*"] # 테스트 파일 포함을 위해 제외 설정을 제거
